Added temporary structures for graph building and updated OSM and GTFS importers to use them. Added strongly connected component check

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
             <groupId>cz.agents</groupId>
             <artifactId>test-cases</artifactId>
             <version>9.0.1</version>
-            <scope>test</scope>
+            <!--<scope>test</scope>-->
         </dependency>
         <dependency>
             <groupId>junit</groupId>
