--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>cz.agents</groupId>
 	<artifactId>gtd-graph-importer</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<build>
 		<plugins>
 			<plugin>
