--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>cz.agents</groupId>
 	<artifactId>gtd-graph-importer</artifactId>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.6</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>cz.agents</groupId>
 			<artifactId>geotools</artifactId>
-			<version>1.4-SNAPSHOT</version>
+			<version>1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
