pom updated: - new parent - renamed to graph-importer - unnecessary code removed - pluginManagement, distributionManagement and dependencyManagemet related things

--- a/pom.xml
+++ b/pom.xml
@@ -4,52 +4,29 @@
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cz.agents</groupId>
-	<artifactId>gtd-graph-importer</artifactId>
+	<artifactId>graph-importer</artifactId>
 	<version>1.7-SNAPSHOT</version>
+    
+    <parent>
+		<groupId>cz.cvut.fel.aic</groupId>
+		<artifactId>aicenter-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+    
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<phase>package</phase>
-						<inherited>true</inherited>
-					</execution>
-				</executions>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8.1</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-						<phase>package</phase>
-						<inherited>true</inherited>
-						<configuration>
-							<additionalparam>-Xdoclint:none</additionalparam>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -85,33 +62,15 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
-	<distributionManagement>
-		<snapshotRepository>
-			<uniqueVersion>true</uniqueVersion>
-			<id>atg-repo</id>
-			<name>jones.felk.cvut.cz-snapshots</name>
-			<url>http://jones.felk.cvut.cz/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>atg-repo</id>
-			<name>jones.felk.cvut.cz-releases</name>
-			<url>http://jones.felk.cvut.cz/artifactory/libs-release-local</url>
-		</repository>
-	</distributionManagement>
-
 </project>
