--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,17 @@
             <artifactId>junit</artifactId>
         </dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<snapshots>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+			<releases />
+			<id>atg-repo</id>
+			<name>atg-repo</name>
+			<url>http://jones.felk.cvut.cz/artifactory/repo</url>
+		</repository>
+	</repositories>
+
 </project>
