--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <dependency>
             <groupId>cz.cvut.fel.aic</groupId>
             <artifactId>geographtools</artifactId>
+			<version>1.1-SNAPSHOT</version>
         </dependency>
         
         <!--other-->
