--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>graph-importer</artifactId>
-	<version>2.1-SNAPSHOT</version>
+	<version>2.1</version>
 	
 	<parent>
 		<groupId>cz.cvut.fel.aic</groupId>
 		<artifactId>aicenter-parent</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 	
 	<build>
