--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>graph-importer</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.1-SNAPSHOT</version>
 	
 	<parent>
 		<groupId>cz.cvut.fel.aic</groupId>
