--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>graph-importer</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	
 	<parent>
 		<groupId>cz.cvut.fel.aic</groupId>
 		<artifactId>aicenter-parent</artifactId>
-		<version>1.1.2-SNAPSHOT</version>
+		<version>2.0.0</version>
 	</parent>
 	
 	<build>
@@ -36,7 +36,6 @@
 		<dependency>
 			<groupId>cz.cvut.fel.aic</groupId>
 			<artifactId>geographtools</artifactId>
-			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
 		
 		<!--other-->
