--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+                    <source>8</source>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -36,7 +40,6 @@
 		<dependency>
 			<groupId>cz.cvut.fel.aic</groupId>
 			<artifactId>geographtools</artifactId>
-			<version>1.1.2-SNAPSHOT</version>
 		</dependency>
 		
 		<!--other-->
