Handling of parallel edge discard fixed (integer division, speed unit support); Reporting of discarded parallel edges; All edge shape location checked in assert mode; generic `getParam` method added to `InternalEdgeBuilder`

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>graph-importer</artifactId>
-	<version>4.0.0</version>
+	<version>4.0.1-SNAPSHOT</version>
 	
 	<parent>
 		<groupId>cz.cvut.fel.aic</groupId>
